22-Apr-2016 Fixes #235. Bam.Core.TokenizedString now has separate caches for verbatim strings, strings using macros from a particular module, and strings that don't use a module but have positional arguments, in order to reduce n in the O(n) search for identical strings.

21-Apr-2016 Fixes #232. Changed Core timing code to use System.Diagnostics.Stopwatch rather than System.DateTime.Now, as the former can make use of a high resolution timer if hardware supports it, or falls back to the system clock which DateTime.Now uses. Mono appears to have a high cost to the first call to any timer (although any number can be created afterwards), so this is pre-empted in a static constructor. Because of this change, the output of --stats is now different, as there is no start/end time to each profile taken.

21-Apr-2016 Fixes #231. Extended the --stats command line option to display the creation times of all named/referenced/encapsulating modules for each configuration built, as an aid for high level profiling.

20-Apr-2016 Fixes #230. If a C module container is constructed with wildcards, a fairly long sequence of commands, including LINQ, is needed to identify an individual (or group) of modules for compiled source files, given a filename. To avoid having to repeat this everywhere, a string indexer has been added to C.CModuleContainer, returning a list of object file modules whose source file matches the filename supplied. For example, if var source = this.CreateCxxSourceContainer(...); then all matching object file modules with the source file foobar.c can be found with source["foobar.c"]. The ForEach function can then be used on this to apply changes per module, for example, apply a private patch to change the compilation options on a single source file out of many.

20-Apr-2016 Fixes #229. If Bam.Core.Module.ClosingPatch was applied to a container of modules, it was not applied to any of its child modules.

20-Apr-2016 ======== Version 1.0.2 beta 2 Release ========
